crates/nash-can/src/snapshots/nash_can__module__tests__accessor_expr.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\nf = .name\n"
---
Module {
    tests: [],
    traits: [],
    impls: [],
    kind: Normal,
    name: ModuleName {
        package: None,
        name: "Main",
    },
    exports: Everything(
        Region {
            start: Position {
                line: 1,
                column: 22,
            },
            end: Position {
                line: 1,
                column: 26,
            },
        },
    ),
    docs: NoDocs(
        Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 4,
                column: 1,
            },
        },
    ),
    decls: Declare {
        definition: Def {
            name: Located {
                region: Region {
                    start: Position {
                        line: 3,
                        column: 1,
                    },
                    end: Position {
                        line: 3,
                        column: 2,
                    },
                },
                value: "f",
            },
            args: [],
            body: Located {
                region: Region {
                    start: Position {
                        line: 3,
                        column: 5,
                    },
                    end: Position {
                        line: 3,
                        column: 10,
                    },
                },
                value: Accessor(
                    "name",
                ),
            },
        },
        next: Empty,
    },
    unions: [],
    aliases: [],
    binops: [],
}
