crates/nash-can/src/snapshots/nash_can__module__tests__alias_both_unused_and_unbound.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\ntype alias Bad 'a = 'b\n"
info: diagnostic
---
nash::names::type_vars_messed_up_in_alias

  × Type alias `Bad` has some type variable problems.
   ╭─[src/Main.nash:3:1]
 2 │ 
 3 │ type alias Bad 'a = 'b
   · ───────────────────────
   ╰────
  help: Type variable `b` appears in the definition, but I do not see it declared.
        Likewise, type variable `a` is declared, but not used.

        Match the declaration to the variables used:

            type alias Bad 'b = ...
