crates/nash-can/src/snapshots/nash_can__module__tests__alias_unbound_type_var.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\ntype alias Bad = List 'a\n"
info: diagnostic
---
nash::names::type_vars_messed_up_in_alias

  × The `Bad` type alias uses an unbound type variable `a` in its definition:
   ╭─[src/Main.nash:3:23]
 2 │ 
 3 │ type alias Bad = List 'a
   ·                       ──
   ╰────
  help: Declare the type variables:

            type alias Bad 'a = ...
