crates/nash-can/src/snapshots/nash_can__module__tests__alias_unused_type_param.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\ntype alias Phantom 'a = Int\n"
info: diagnostic
---
nash::names::type_vars_messed_up_in_alias

  × Type alias `Phantom` does not use the `a` type variable.
   ╭─[src/Main.nash:3:20]
 2 │ 
 3 │ type alias Phantom 'a = Int
   ·                    ──
   ╰────
  help: Remove a from the declaration:

            type alias Phantom = ...
