crates/nash-can/src/snapshots/nash_can__module__tests__ambiguous_binop.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\nimport Basics exposing (..)\n\nimport MyMath exposing (..)\n\nx a b = a + b\n"
info: diagnostic
---
nash::names::ambiguous_binop

  × Ambiguous operator `+`.
   ╭─[src/Main.nash:7:11]
 6 │ 
 7 │ x a b = a + b
   ·           ─
   ╰────
  help:     Basics.+
            MyMath.+

        Use a qualified name.
