crates/nash-can/src/snapshots/nash_can__module__tests__ambiguous_ctor_in_expr.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\nimport Maybe exposing (Maybe(..))\n\nimport Option exposing (Option(..))\n\nx = Just\n"
info: diagnostic
---
nash::names::ambiguous_ctor

  × Ambiguous variant `Just`.
   ╭─[src/Main.nash:7:5]
 6 │ 
 7 │ x = Just
   ·     ────
   ╰────
  help:     Maybe.Just
            Option.Just

        Use a qualified name.
