crates/nash-can/src/snapshots/nash_can__module__tests__ambiguous_var.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\nimport Foo exposing (..)\n\nimport Bar exposing (..)\n\nx = baz\n"
info: diagnostic
---
nash::names::ambiguous_var

  × Ambiguous variable `baz`.
   ╭─[src/Main.nash:7:5]
 6 │ 
 7 │ x = baz
   ·     ───
   ╰────
  help:     Bar.baz
            Foo.baz

        Use a qualified name.
