crates/nash-can/src/snapshots/nash_can__module__tests__annotation_too_short.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\nf : a\nf x = x\n"
---
[
    NotFoundType {
        region: Region {
            start: Position {
                line: 3,
                column: 5,
            },
            end: Position {
                line: 3,
                column: 6,
            },
        },
        prefix: None,
        name: "a",
        suggestions: PossibleNames {
            locals: [
                "Bytes",
                "Data",
                "Int",
                "List",
                "Map",
                "array",
                "bls_g1",
                "bls_g2",
                "bls_mlr",
                "bool",
                "bytes",
                "int",
                "list",
                "pair",
                "string",
                "unit",
                "value",
            ],
            qualified: [
                (
                    "Builtin",
                    [
                        "Bytes",
                        "Data",
                        "Int",
                        "List",
                        "Map",
                        "array",
                        "bls_g1",
                        "bls_g2",
                        "bls_mlr",
                        "bool",
                        "bytes",
                        "int",
                        "list",
                        "pair",
                        "string",
                        "unit",
                        "value",
                    ],
                ),
            ],
        },
    },
]
